ok all working aded the sharedpreferenced

--- a/MAD_prj/app/src/main/res/layout/activity_profile_settings.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_profile_settings.xml
@@ -231,6 +231,7 @@
                         android:layout_marginBottom="2dp" />
 
                     <TextView
+                        android:id="@+id/showemail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="alex.johnson@email.com"
