--- a/MAD_prj/app/src/main/res/layout/activity_profile_settings.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_profile_settings.xml
@@ -761,7 +761,8 @@
             </LinearLayout>
 
             <!-- Sign Out -->
-            <TextView
+            <Button
+                android:id="@+id/signoutbtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sign Out"
