--- a/MAD_prj/app/src/main/res/layout/activity_sleep_tracker.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_sleep_tracker.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SleepTrackerActivity"
-    android:background="#0E072E">
+    android:background="#0E072E"
+    android:fitsSystemWindows="true">
 
     <View
     android:layout_width="match_parent"
