--- a/MAD_prj/app/src/main/res/layout/activity_ai_tips.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_ai_tips.xml
@@ -5,7 +5,8 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_gradient">
+    android:background="@drawable/bg_gradient"
+    android:fitsSystemWindows="true">
 
     <!-- Back arrow -->
     <ImageView
