--- a/MAD_prj/app/src/main/res/layout/activity_calorie_tracker.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_calorie_tracker.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F9FAFB"
-    tools:context=".CalorieTrackerActivity">
+    tools:context=".CalorieTrackerActivity"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:id="@+id/top_bar"
