--- a/MAD_prj/app/src/main/res/layout/activity_health_vitals.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_health_vitals.xml
@@ -6,7 +6,8 @@
     tools:context=".HealthVitalsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4F4F9">
+    android:background="#F4F4F9"
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:id="@+id/top_bar"
