--- a/MAD_prj/app/src/main/res/layout/activity_main.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F9F9"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fitsSystemWindows="true">
 
     <!-- Top Heart Icon -->
     <ImageView
