--- a/MAD_prj/app/src/main/res/layout/activity_login.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_login.xml
@@ -121,7 +121,7 @@
                 android:stateListAnimator="@null" />
 
             <!-- Sign up -->
-            <TextView
+            <Button
                 android:id="@+id/tvSignup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
