--- a/MAD_prj/app/src/main/res/layout/activity_water_tracker.xml
+++ b/MAD_prj/app/src/main/res/layout/activity_water_tracker.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F8FD"
-    tools:context=".WaterTrackerActivity"
-    android:fitsSystemWindows="true">
+    tools:context=".WaterTrackerActivity">
 
     <!-- Scrollable content -->
     <ScrollView
@@ -65,7 +64,7 @@
                     android:id="@+id/tv_glasses"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="6 / 8 glasses"
+                    android:text="1 / 8 glasses"
                     android:textColor="#FFFFFF"
                     android:textSize="22sp"
                     android:textStyle="bold"
@@ -77,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="14dp"
                     android:max="100"
-                    android:progress="75"
+                    android:progress="12"
                     android:progressDrawable="@drawable/progress_rounded"
                     android:indeterminate="false"
                     android:layout_marginBottom="16dp" />
@@ -86,7 +85,7 @@
                     android:id="@+id/tv_encourage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Great job! You're almost there! 💪"
+                    android:text="Let's start hydrating! Your body will thank you!"
                     android:textColor="#FFFFFF"
                     android:textSize="15sp"
                     android:gravity="center" />
@@ -103,9 +102,10 @@
                 android:layout_marginBottom="16dp">
 
                 <TextView
+                    android:id="@+id/tv_remaining"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2 more glasses to go!"
+                    android:text="7 more glasses to go!"
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:textColor="#000000"
@@ -169,6 +169,7 @@
                     android:layout_gravity="center">
 
                     <ImageView
+                        android:id="@+id/Waterdrop1"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -177,6 +178,7 @@
                         android:tint="#1E88E5" /> <!-- Filled -->
 
                     <ImageView
+                        android:id="@+id/Waterdrop2"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -185,6 +187,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop3"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -193,6 +196,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop4"
                         android:layout_width="80dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -201,6 +205,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop5"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -209,6 +214,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop6"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -217,6 +223,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop7"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
@@ -225,6 +232,7 @@
                         android:tint="#000000" />
 
                     <ImageView
+                        android:id="@+id/Waterdrop8"
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:src="@drawable/ic_water_drop"
